Fix missing <tr>

--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -17,8 +17,10 @@
     <td>Model</td>
     <td>{{ object.model }}</td>
   </tr>
-  <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership"> <a
-      href="#">Ownership</a></th>
+  <tr>
+    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership">
+      <a href="#">Ownership</a></th>
+  </tr>
   {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
