--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -44,8 +44,10 @@
   </tr>
   {% endif %}
 
-  <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership"> <a
-      href="#">Ownership</a></th>
+  <tr>
+    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership">
+      <a href="#">Ownership</a></th>
+  </tr>
   {% if object.acquired is not None %}
   <tr>
     <td>Acquired</td>
