Add Summary subheading to detail views

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -18,8 +18,8 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
-        href="#physical">Physical</a></th>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
+        href="#">Summary</a></th>
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -189,6 +189,11 @@
     <td>{{ object.introduced }}{% if object.discontinued is not None %}-{{ object.discontinued }}{% endif %}</td>
   </tr>
   {% endif %}
+
+  <tr>
+    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
+        href="#physical">Physical</a></th>
+  </tr>
   {% if object.body_type is not None %}
   <tr>
     <td>Body type</td>
@@ -552,12 +557,16 @@
 {% endblock %}
 
 {% block moreactions %}
-<li><form action="{% url 'camera-create' %}">
-  <input type="hidden" name="cameramodel" value="{{ object.id }}">
-  <button class="btn btn-primary" type="submit">Add to collection</button>
-</form></li>
-<li><form action="{% url 'cameramodel-create' %}">
-  <input type="hidden" name="clone" value="{{ object.slug }}">
-  <button class="btn btn-primary" type="submit">Clone this camera model</button>
-</form></li>
+<li>
+  <form action="{% url 'camera-create' %}">
+    <input type="hidden" name="cameramodel" value="{{ object.id }}">
+    <button class="btn btn-primary" type="submit">Add to collection</button>
+  </form>
+</li>
+<li>
+  <form action="{% url 'cameramodel-create' %}">
+    <input type="hidden" name="clone" value="{{ object.slug }}">
+    <button class="btn btn-primary" type="submit">Clone this camera model</button>
+  </form>
+</li>
 {% endblock %}
