--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -5,8 +5,8 @@
 {% block content %}
 <table class="table table-hover">
   <tr>
-    <th colspan="2" id="basics"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Misc"> <a
-        href="#basics">Basics</a></th>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
+        href="#">Summary</a></th>
   </tr>
   {% if object.filmstock is not None %}
   <tr>
@@ -43,7 +43,7 @@
     <td>Date loaded</td>
     <td>{{ object.date_loaded }}</td>
   </tr>
-  {% endif %}  
+  {% endif %}
   {% if object.camera is not None %}
   <tr>
     <td>Camera</td>
@@ -65,8 +65,8 @@
 
 
   <tr>
-    <th colspan="2" id="development"><img src="{% static "svg/developer.svg" %}" width="30" height="30" alt="Development"> <a
-        href="#development">Development</a></th>
+    <th colspan="2" id="development"><img src="{% static "svg/developer.svg" %}" width="30" height="30"
+        alt="Development"> <a href="#development">Development</a></th>
   </tr>
   {% if object.developer is not None %}
   <tr>
@@ -159,7 +159,7 @@
   </tr>
   {% endif %}
 
-  
+
   <tr>
     <th colspan="2" id="archive"><img src="{% static "svg/archive.svg" %}" width="30" height="30" alt="Archive"> <a
         href="#archive">Archive</a></th>
@@ -192,7 +192,10 @@
 {% endblock %}
 
 {% block moreactions %}
-{% if object.status == "Available" %}<li><a class="btn btn-primary" href="{% url 'film-load' object.id_owner %}" role="button">Load this film into a camera</a></li>{% endif %}
-{% if object.status == "Loaded" %}<li><a class="btn btn-primary" href="{% url 'film-develop' object.id_owner %}" role="button">Develop this film</a></li>{% endif %}
-{% if object.status == "Developed" %}<li><a class="btn btn-primary" href="{% url 'film-archive' object.id_owner %}" role="button">Archive this film</a></li>{% endif %}
+{% if object.status == "Available" %}<li><a class="btn btn-primary" href="{% url 'film-load' object.id_owner %}"
+    role="button">Load this film into a camera</a></li>{% endif %}
+{% if object.status == "Loaded" %}<li><a class="btn btn-primary" href="{% url 'film-develop' object.id_owner %}"
+    role="button">Develop this film</a></li>{% endif %}
+{% if object.status == "Developed" %}<li><a class="btn btn-primary" href="{% url 'film-archive' object.id_owner %}"
+    role="button">Archive this film</a></li>{% endif %}
 {%endblock%}
