--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -4,6 +4,10 @@
 {% block content %}
 <table class="table table-hover">
   <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
+        href="#">Summary</a></th>
+  </tr>
+  <tr>
     <td>Accessory type</td>
     <td>{{ object.type }}</td>
   </tr>
