--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -1,8 +1,13 @@
 {% extends "detail.html" %}
+{% load static %}
 {% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
+        href="#">Summary</a></th>
+  </tr>
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
