--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -1,7 +1,12 @@
 {% extends "detail.html" %}
+{% load static %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
+        href="#">Summary</a></th>
+  </tr>
   <tr>
     <td>Name</td>
     <td>{{ object.name }}</td>
@@ -46,5 +51,6 @@
 {% endblock %}
 
 {% block moreactions %}
-<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?negative_size={{ object.id }}" role="button">View camera models with this negative size</a></li>
+<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?negative_size={{ object.id }}" role="button">View
+    camera models with this negative size</a></li>
 {% endblock %}
