--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -258,6 +258,16 @@
     <td>{{ object.notes|linebreaks }}</td>
   </tr>
   {% endif %}
+  {% if object.url is not None %}
+  <tr>
+    <td>URL</td>
+    <td><a href="{{ object.url }}">{{ object.url }}</a></td>
+  </tr>
+  {% endif %}
+  <tr>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
+  </tr>
   {% if object.tags.all %}
   <tr>
     <td>Tags</td>
@@ -276,12 +286,6 @@
         {% endfor %}
       </ul>
     </td>
-  </tr>
-  {% endif %}
-  {% if object.url is not None %}
-  <tr>
-    <td>URL</td>
-    <td><a href="{{ object.url }}">{{ object.url }}</a></td>
   </tr>
   {% endif %}
   {% if history %}
