Fix spacing on Ownership subheadings

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -59,7 +59,7 @@
 
     <tr>
         <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30"
-                alt="Ownership"> <a href="#">Ownership</a></th>
+                alt="Ownership">&nbsp;<a href="#ownership">Ownership</a></th>
     </tr>
     {% if object.own is not None %}
     <tr>
