--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -22,8 +22,8 @@
     <td>{{ object.model }}</td>
   </tr>
   <tr>
-    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30" alt="Ownership">
-      <a href="#">Ownership</a></th>
+    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30"
+        alt="Ownership">&nbsp;<a href="#ownership">Ownership</a></th>
   </tr>
   {% if object.acquired is not None %}
   <tr>
