Fix spacing on Summary subheadings

--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -5,8 +5,8 @@
 {% block content %}
 <table class="table table-hover">
     <tr>
-        <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary"><a
-                href="#">Summary</a></th>
+        <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30"
+                alt="Summary">&nbsp;<a href="#">Summary</a></th>
     </tr>
     <tr>
         <th>Camera model</th>
