--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -23,13 +23,36 @@
   {% if object.paper_stock is not None %}
   <tr>
     <td>Paperstock</td>
-    <td><a href="{% url 'paper_stock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a></td>
+    <td><a href="{% url 'paperstock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a></td>
   </tr>
   {% endif %}
   {% if object.width is not None and object.height is not None %}
   <tr>
     <td>Size</td>
     <td>{{ object.width }} &times; {{ object.height }}</td>
+  </tr>
+  {% endif %}
+  {% if object.fine is not None %}
+  <tr>
+    <td>Fine</td>
+    <td>{{ object.fine|boolicontag }}</td>
+  </tr>
+  {% endif %}
+
+  <tr>
+    <th colspan="2" id="exposure"><img src="{% static "svg/enlarger.svg" %}" width="30" height="30" alt="Exposure"> <a
+        href="#exposure">Exposure</a></th>
+  </tr>
+  {% if object.enlarger is not None %}
+  <tr>
+    <td>Enlarger</td>
+    <td>{{ object.enlarger }}</td>
+  </tr>
+  {% endif %}
+  {% if object.lens is not None %}
+  <tr>
+    <td>Enlarger lens</td>
+    <td>{{ object.lens }}</td>
   </tr>
   {% endif %}
   {% if object.aperture is not None %}
@@ -50,13 +73,18 @@
     <td>{{ object.filtration_grade }}</td>
   </tr>
   {% endif %}
+
+  <tr>
+    <th colspan="2" id="development"><img src="{% static "svg/developer.svg" %}" width="30" height="30"
+        alt="Development"> <a href="#development">Development</a></th>
+  </tr>
   {% if object.development_time is not None %}
   <tr>
     <td>Development time</td>
     <td>{{ object.development_time }}</td>
   </tr>
   {% endif %}
-  {% if object.toner is not None %}
+  {% if object.toner.all %}
   <tr>
     <td>Toner</td>
     <td>
@@ -67,40 +95,16 @@
     </td>
   </tr>
   {% endif %}
-  {% if object.enlarger is not None %}
-  <tr>
-    <td>Enlarger</td>
-    <td>{{ object.enlarger }}</td>
-  </tr>
-  {% endif %}
-  {% if object.lens is not None %}
-  <tr>
-    <td>Enlarger lens</td>
-    <td>{{ object.lens }}</td>
-  </tr>
-  {% endif %}
   {% if object.developer is not None %}
   <tr>
     <td>Developer</td>
     <td><a href="{% url 'developer-detail' object.developer.slug %}">{{ object.developer }}</a></td>
   </tr>
   {% endif %}
-  {% if object.fine is not None %}
-  <tr>
-    <td>Fine</td>
-    <td>{{ object.fine|boolicontag }}</td>
-  </tr>
-  {% endif %}
-  {% if object.notes is not None %}
+  {% if object.notes %}
   <tr>
     <td>Notes</td>
     <td>{{ object.notes|linebreaks }}</td>
-  </tr>
-  {% endif %}
-  {% if object.archive is not None %}
-  <tr>
-    <td>Archive</td>
-    <td><a href="{% url 'archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
   </tr>
   {% endif %}
   {% if object.printer is not None %}
@@ -130,6 +134,12 @@
   <tr>
     <td>Sold price</td>
     <td>{{ object.sold_price }}</td>
+  </tr>
+  {% endif %}
+  {% if object.archive is not None %}
+  <tr>
+    <td>Archive</td>
+    <td><a href="{% url 'archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
   </tr>
   {% endif %}
 </table>
