--- a/schema/templates/schema/scan_detail.html
+++ b/schema/templates/schema/scan_detail.html
@@ -18,7 +18,7 @@
   {% if object.filename is not None %}
   <tr>
     <td>Filename</td>
-    <td>{{ object.filename }}</td>
+    <td><code>{{ object.filename }}</code></td>
   </tr>
   {% endif %}
   {% if object.date is not None %}
