--- a/schema/templates/schema/format_detail.html
+++ b/schema/templates/schema/format_detail.html
@@ -22,6 +22,10 @@
     </td>
   </tr>
   {% endif %}
+  <tr>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
+  </tr>
   {% if history %}
   <tr>
     <td>Edit history</td>
