--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -8,6 +8,18 @@
     <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
         href="#">Summary</a></th>
   </tr>
+  {% if object.status is not None %}
+  <tr>
+    <td>Status</td>
+    <td>{{ object.status }}</td>
+  </tr>
+  {% endif %}
+
+
+  <tr>
+    <th colspan="2" id="filmstock"><img src="{% static "svg/film.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#filmstock">Filmstock</a></th>
+  </tr>
   {% if object.filmstock is not None %}
   <tr>
     <td>Filmstock</td>
@@ -26,10 +38,28 @@
     <td><a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a></td>
   </tr>
   {% endif %}
-  {% if object.status is not None %}
+  {% if object.bulk_film is not None %}
   <tr>
-    <td>Status</td>
-    <td>{{ object.status }}</td>
+    <td>Bulk film</td>
+    <td>{{ object.bulk_film }}</td>
+  </tr>
+  {% endif %}
+  {% if object.bulk_film_loaded is not None %}
+  <tr>
+    <td>Bulk film loaded</td>
+    <td>{{ object.bulk_film_loaded }}</td>
+  </tr>
+  {% endif %}
+  {% if object.film_batch is not None %}
+  <tr>
+    <td>Batch code</td>
+    <td><code>{{ object.film_batch }}</code></td>
+  </tr>
+  {% endif %}
+  {% if object.expiry_date is not None %}
+  <tr>
+    <td>Expiry date</td>
+    <td>{{ object.expiry_date }}</td>
   </tr>
   {% endif %}
 
@@ -38,16 +68,16 @@
     <th colspan="2" id="exposure"><img src="{% static "svg/camera.svg" %}" width="30" height="30" alt="Exposure"> <a
         href="#exposure">Exposure</a></th>
   </tr>
-  {% if object.date_loaded is not None %}
-  <tr>
-    <td>Date loaded</td>
-    <td>{{ object.date_loaded }}</td>
-  </tr>
-  {% endif %}
   {% if object.camera is not None %}
   <tr>
     <td>Camera</td>
     <td><a href="{% url 'camera-detail' object.camera.id_owner %}">{{ object.camera }}</a></td>
+  </tr>
+  {% endif %}
+  {% if object.date_loaded is not None %}
+  <tr>
+    <td>Date loaded</td>
+    <td>{{ object.date_loaded }}</td>
   </tr>
   {% endif %}
   {% if object.frames is not None %}
@@ -116,42 +146,6 @@
     <td>{{ object.development_notes|linebreaks }}</td>
   </tr>
   {% endif %}
-  {% if object.bulk_film is not None %}
-  <tr>
-    <td>Bulk film</td>
-    <td>{{ object.bulk_film }}</td>
-  </tr>
-  {% endif %}
-  {% if object.bulk_film_loaded is not None %}
-  <tr>
-    <td>Bulk film loaded</td>
-    <td>{{ object.bulk_film_loaded }}</td>
-  </tr>
-  {% endif %}
-  {% if object.film_batch is not None %}
-  <tr>
-    <td>Batch code</td>
-    <td><code>{{ object.film_batch }}</code></td>
-  </tr>
-  {% endif %}
-  {% if object.expiry_date is not None %}
-  <tr>
-    <td>Expiry date</td>
-    <td>{{ object.expiry_date }}</td>
-  </tr>
-  {% endif %}
-  {% if object.purchase_date is not None %}
-  <tr>
-    <td>Purchase date</td>
-    <td>{{ object.purchase_date }}</td>
-  </tr>
-  {% endif %}
-  {% if object.price is not None %}
-  <tr>
-    <td>Price</td>
-    <td>{{ object.price }}</td>
-  </tr>
-  {% endif %}
   {% if object.processed_by is not None %}
   <tr>
     <td>Processed by</td>
@@ -168,6 +162,24 @@
   <tr>
     <td>Archive</td>
     <td><a href="{% url 'archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
+  </tr>
+  {% endif %}
+
+
+  <tr>
+    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30"
+        alt="Ownership">&nbsp;<a href="#ownership">Ownership</a></th>
+  </tr>
+  {% if object.purchase_date is not None %}
+  <tr>
+    <td>Purchase date</td>
+    <td>{{ object.purchase_date }}</td>
+  </tr>
+  {% endif %}
+  {% if object.price is not None %}
+  <tr>
+    <td>Price</td>
+    <td>{{ object.price }}</td>
   </tr>
   {% endif %}
 </table>
